# src/routes/acteur_routes.js
@@ -5,6 +5,7 @@ const operationController = require('../controllers/operation_controller');
 const router = express.Router();
 
 router.post('/onbording/callback', clientController.activeOnbording);
+router.post('/mouvements/callback', operationController.activeMouvement);
 router.post('/operations/callback', operationController.activeOperation);
 
 module.exports = router;
